--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.menu-item_link {
+    @apply block text-white hover:bg-indigo-500 px-4 py-3;
+}
+@layer header-bg {
+    .bg-head {
+        background-color: rgb(39,47,85);
+    }
+}
